--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    implementation 'io.minio:minio:6.0.13'
+
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.456'
+    implementation 'software.amazon.awssdk:s3-transfer-manager:2.20.57'
+    implementation 'software.amazon.awssdk.crt:aws-crt:0.21.8'
+
+    implementation 'org.json:json:20230227'
+
 
     compile "com.rabbitmq:http-client:2.1.0.RELEASE"
 
