EPMRPP-83540 || Change gradle scripts version and add default values for datastore variables

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,9 +32,9 @@ datastore:
   accessKey:
   secretKey:
   endpoint:
-  region:
-  bucketPrefix:
-  defaultBucketName:
+  region: eu-west-1
+  bucketPrefix: prj-
+  defaultBucketName: rp-bucket
   singleBucketName:
   secrets:
     path: keystore
