--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=5.8.0-SNAPSHOT
 description=EPAM Report portal. Complex migrations
 dockerServerUrl=unix:///var/run/docker.sock
-dockerPrepareEnvironment=apk -U -q upgrade && apk --no-cache -q add openjdk11 ca-certificates
-dockerJavaOpts=-Xmx512m -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=70 -Djava.security.egd=file:/dev/./urandom
+dockerPrepareEnvironment=
+dockerJavaOpts=-Xmx1g -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=70 -Djava.security.egd=file:/dev/./urandom
