--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation 'software.amazon.awssdk:s3-transfer-manager:2.20.57'
     implementation 'software.amazon.awssdk.crt:aws-crt:0.21.8'
 
+    implementation 'com.google.guava:guava:31.1-jre'
+
     implementation 'org.json:json:20230227'
 
 
