EPMRPP-84468 || Add old token migration service and update the order of migration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,12 @@ rp:
       startDate:
       #Maximum number of logs migrated at once
       logsNumber:
+  token:
+    migration: false
+  singlebucket:
+    migration: false
+  elastic:
+    migration: false
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
