EPMRPP-84468 || Update default value

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@ rp:
     migration: false
   elastic:
     migration: false
+  minio:
+    s3:
+      migration: false
 
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
