--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ info.build.repo=${repo}
 server.port=8686
 management.endpoints.web.base-path=/
 management.endpoint.info.enabled=true
+
+## Profiles list
+spring.profiles.active=\${migrations_profiles:default}
