--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=5.8.0-SNAPSHOT
+version=1.0.0
 description=EPAM Report portal. Complex migrations
 dockerServerUrl=unix:///var/run/docker.sock
 dockerPrepareEnvironment=
