--- a/helm-charts/migrations-complex/values.yaml
+++ b/helm-charts/migrations-complex/values.yaml
@@ -57,7 +57,7 @@ database:
 
 image:
   repository: reportportal/migrations-complex
-  tag: ""
+  tag: "1.0.0"
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
