--- a/.github/workflows/manually-release.yml
+++ b/.github/workflows/manually-release.yml
@@ -20,8 +20,10 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Setup git credentials
         uses: oleksiyrudenko/gha-git-credentials@v2
