--- a/.github/workflows/manually-release.yml
+++ b/.github/workflows/manually-release.yml
@@ -20,10 +20,19 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Setup git credentials
         uses: oleksiyrudenko/gha-git-credentials@v2
@@ -31,6 +40,13 @@ jobs:
           name: 'reportportal.io'
           email: 'support@reportportal.io'
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Release with Gradle
+        id: release
+        run: |
+          ./gradlew release -PreleaseMode -Pscripts.version=${{env.SCRIPTS_VERSION}} \
+          -PgithubUserName=${{env.GH_USER_NAME}} -PgithubToken=${{secrets.GITHUB_TOKEN}} \
+          -PgpgPassphrase=${{secrets.GPG_PASSPHRASE}} -PgpgPrivateKey="${{secrets.GPG_PRIVATE_KEY}}"
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1
