--- a/.github/workflows/manually-release.yml
+++ b/.github/workflows/manually-release.yml
@@ -9,14 +9,10 @@ on:
       scripts_version:
         description: 'Gradle scripts version'
         required: true
-      bom_version:
-        description: 'Commons bom version'
-        required: true
 
 env:
   GH_USER_NAME: github.actor
   SCRIPTS_VERSION: ${{ github.event.inputs.scripts_version }}
-  BOM_VERSION: ${{ github.event.inputs.bom_version }}
   RELEASE_VERSION: ${{ github.event.inputs.version }}
   REPOSITORY_URL: 'https://maven.pkg.github.com/'
 
@@ -26,6 +22,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -47,6 +45,12 @@ jobs:
         id: release
         run: |
           ./gradlew release -PreleaseMode -Pscripts.version=${{env.SCRIPTS_VERSION}} \
-          -Pbom.version=${{env.BOM_VERSION}} \
           -PgithubUserName=${{env.GH_USER_NAME}} -PgithubToken=${{secrets.GITHUB_TOKEN}} \
           -PgpgPassphrase=${{secrets.GPG_PASSPHRASE}} -PgpgPrivateKey="${{secrets.GPG_PRIVATE_KEY}}"
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        with:
+          charts_dir: .
